# med-assist

./: .gitignore  README.md  caresteps-final-submission-draft.md  caresteps-team-proposal-draft.md  caresteps-use-cases-and-metrics.md  evaluation-protocol.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: dependencies.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/routes/: generate.py  metrics.py  review.py
backend/app/core/: config.py
backend/app/models/: request_models.py  response_models.py
backend/app/repositories/: case_repository.py  review_repository.py
backend/app/services/: azure_openai_service.py  guardrails_service.py  metrics_service.py  prompt_builder.py  review_service.py
backend/patient-insights-api/: .env.example  requirements.txt
backend/patient-insights-api/app/: config.py  dependencies.py  main.py
backend/patient-insights-api/app/data/: patient1.json
backend/patient-insights-api/app/prompts/: prompts.py
backend/patient-insights-api/app/routers/: patient.py
backend/patient-insights-api/app/schemas/: __init__.py  patient.py
backend/patient-insights-api/app/services/: azure_llm.py
backend/tests/: test_health.py
ppt/: MedAssist-3min-flow-v2.pptx  MedAssist-3min.pptx  MedAssist-Final-Content-FromScratch.backup-before-backend-flow.pptx  MedAssist-Final-Content-FromScratch.pptx  medassist-3min-deck.md  medassist-hackathon-deck.md  medassist-visual-style-guide.md
